fixed spacing

--- a/public/sass/header-and-footer.scss
+++ b/public/sass/header-and-footer.scss
@@ -1,15 +1,14 @@
-.navbar-page-fix{
-  display: block;
-  width: 100%;
-  height: 50px;
-  background-color: #eb6864;
+.navbar{
+  position: relative;
+  margin-bottom: 0;
+  border-bottom: 2px solid #d05c58;
 }
 
 .heading-background{
   background-color: #eb6864;
   display: inline-block;
   width: 100%;
-  padding: 55px 10px 15px 10px;
+  padding: 40px 10px 15px 10px;
 
   .logo{
     font-family: thunder-things;
@@ -38,7 +37,7 @@
 .footer{
   display: block;
   background-color: #eb6864;
-  padding: 15px 10px 15px 10px;
+  padding: 5px;
   width: 100%;
 
   .social > a{
