--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -29,18 +29,6 @@ body, html{
   }
 }
 
-hr{
-  border-color: rgba(235, 104, 100, .8);
-  border-width: 3px;
-  margin: 30px 0;
-}
-
-hr.secondary{
-  border-color: rgba(224, 224, 224, 0.8);
-  border-width: 2px;
-  margin: 15px -15px;
-}
-
 #disqus_thread {
   overflow: hidden;
 
@@ -53,10 +41,16 @@ textarea {
   resize: vertical;
 }
 
-.navbar{
-  position: relative;
-  margin-bottom: 0;
-  border-bottom: 2px solid #d05c58;
+hr{
+  border-color: rgba(235, 104, 100, .8);
+  border-width: 3px;
+  margin: 30px 0;
+}
+
+hr.secondary{
+  border-color: rgba(224, 224, 224, 0.8);
+  border-width: 2px;
+  margin: 15px -15px;
 }
 
 .page{
@@ -65,6 +59,10 @@ textarea {
 }
 
 @media screen and #{$break-phone} {
+  hr.secondary{
+    margin: 15px 0;
+  }
+  
   .page{
     overflow-x: hidden;
     padding: 15px 0;
